# optictriage

./: .aidevops.json  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  USER_GUIDE.md  optictriage.spec  pyproject.toml
.beads/: config.yaml
.github/workflows/: release.yml
docs/: G-Product Requirements Document.md  Q-Product Requirements Document.md  scope.md
docs/research-papers/: A Practical Guide to Photogrammetry Pre-Processing for Archaeologists_ From Raw Images to Georeferenced Models.md  Drone Data for Photogrammetry Integration.md  From CPU Fallback to GPU Acceleration_ A Scalable Optimization Blueprint for the OpticTriage Photogrammetry Pre-Processor.md  From Drone Metadata to 3D Reconstruction_ A Practical Guide to UAV Telemetry Processing, Geospatial QC, and SfM Export for OpticTriage.md  From Field to Reconstruction_ A Diagnostic Framework for Automated Photogrammetry Pre-Processing in Archaeological Science.md  OpticTriage_ OpenCV Optimization Research.md  Photogrammetry Pre-processing Research for Archaeology v2.md  Photogrammetry Pre-processing Research for Archaeology.md  Photogrammetry Pre-processing Tool Research.md
docs/research-prompts/: 01_photogrammetry_input_requirements.txt  02_coded_photogrammetry_targets.txt  03_image_quality_metrics.txt  04_exif_metadata_standards.txt  05_colour_calibration_targets.txt  06_opendronemap_input_format.txt  (+3 more)
tests/: profile_pipeline.py  test_colmap.py  test_color_normalization.py  test_e2e_pipeline.py  test_gpx.py  test_multiprocessing.py  test_phash.py  test_pipeline.py  test_segmentation.py
(+40 files in other folders)
