[project]
name = "optictriage"
version = "0.1.0"
description = "A lightweight, non-destructive diagnostic utility that pre-processes batches of field photographs before they enter SfM pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "opencv-python>=4.8.0",
    "rawpy>=0.19.0",
    "pyexiv2>=2.14.0",
    "PyTurboJPEG>=1.7.0",
    "Shapely>=2.0.0",
    "pyproj>=3.6.0",
    "pandas>=2.0.0",
    "SQLAlchemy>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "psutil>=5.9.0",
    "gpxpy>=1.6.0",
    "imagehash>=4.3.1",
    "scipy>=1.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
]

[project.scripts]
optictriage = "optictriage.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
